# os3

./: .gitmodules  CMakeLists.txt  README.md
backup/include/: OS3.h  OS3Engine.h  OS3ROS.h
backup/src/: OS3Engine.cpp  OS3ROS.cpp
include/: OS3.h  OS3Engine.h  OS3ROS.h
rosbags/: 2023-04-04-16-03-28.bag  2023-04-04-16-03-52.bag
scripts/: manual_joint_publisher.py  pub_jointstate.sh  pub_wrench.sh  send_pos.sh
src/: OS3.cpp  OS3Engine.cpp  OS3ROS.cpp
src/Models/: arm26-mod-old.osim  arm26-mod-temp.osim  arm26-mod.osim
